fix resource library social share so its not covering content

--- a/resource-library/resource-library.less
+++ b/resource-library/resource-library.less
@@ -7,6 +7,23 @@
     margin: 0 auto;
 }
 
+#resource-information,
+#related-resources {
+  
+  @media @medium { .padding-x(extract(@icon-sizes, 4) + (@column-gutter / 2)); }
+}
+
+@media @medium-only {
+  
+  .mktoForm .mktoFormRow {
+    .flex-direction(row);
+  }
+  .mktoForm .mktoFormCol {
+    .flex(1, 1, 0);
+    width: auto;
+  }
+}
+
 
 
 /* ORDER OF COLUMNS */
